# cloudcam

./: .gitignore  .travis.yml  Makefile  Pipfile  README.md  cam_setup.py  cloudcam.c  cloudcam.sublime-project  new_thing_config.json  package.conf  package.json  requirements.txt  serverless.yml
axis/: Makefile
certs/: cloudcam-ca.pem  cloudcam-ca.srl  cloudcam-client-test.crt  cloudcam-client-test.key  cloudcam-server-test.crt  cloudcam-server-test.key  cloudcam-test-ca.pem  make-ca.sh  make-test-ca.sh  make-test-certs.sh
client/rust/: Cargo.toml  README.md
client/rust/axis/: Makefile  build-packages.sh  capture-jpeg-snapshot.c  launcher.c  package-1.4.conf  package-2.0.conf  package.conf
client/rust/axis/script/: build-package-on-docker.sh  eap-install.sh
client/rust/src/: axis_native.rs  axis_vapix.rs  config.rs  error.rs  main.rs  rtp.rs  rtsp.rs  streams.rs  tools.rs  upload_thumb.rs
cloudcam/: cognito_presignup.py  iot_attach_user_policy.py  iot_list_things.py  iot_provision_thing.py  iot_request_thumb.py  janus_scale_lightsail.py  janus_start_stream.py  janus_stop_stream.py  tools.py
cloudformation/: cloudcam.json  cloudcam.yml  cognito.yml  deploy-janus-ecs.sh  deploy-stack-dev.sh  deploy-stack-travis.sh  deploy-stack.sh  encrypt-ssl-key.sh  iot.yml  janus-ecs.yml  janus.yml  lambda_roles.yml  outputs.yml  s3.yml
config/: aws_iot_config.h
dev-ui/: .gitignore  LICENSE  README.md  package-lock.json  package.json  webpack.config.babel.js
lambda/: README  cloudcam_handler.py  cognito_presignup.py  iot_attach_thing_policy.py  iot_list_things.py  (+7 more)
(+71 files in other folders)
